// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Img /> should display placeholder while loading when a placeholder property is given 1`] = `
<div>
  <img
    alt=""
    onError={[Function]}
    onLoad={[Function]}
    src="../../assets/img/card.png"
  />
  <div>
    <div />
  </div>
</div>
`;

exports[`<Img /> should not render a default placeholder element while the image loads if one is not provided 1`] = `
<div>
  <img
    alt="alt-text"
    onError={[Function]}
    onLoad={[Function]}
    src="../../assets/img/card.png"
  />
</div>
`;
